<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <include layout="@layout/search_bar"></include>
   	
	<TextView
		android:id="@+id/home_top_download"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/top_download"
		android:textSize="20sp">
	</TextView>
	
	<TextView
		android:id="@+id/home_newest"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/newest"
		android:textSize="20sp">
	</TextView>
	
	<TextView
		android:id="@+id/home_all_category"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/all_categories"
		android:textSize="20sp">
	</TextView>
	
	<TextView
		android:id="@+id/home_library"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/library"
		android:textSize="20sp">
	</TextView>
	
	<TextView
		android:id="@+id/home_rate_promote"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/rate_promote"
		android:textSize="20sp">
	</TextView>
	
   	
</LinearLayout>
