<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="vertical">
  	
  	<include layout="@layout/ads"></include>
  	
  	<View 
		android:layout_height="1dip"
		android:layout_width="fill_parent"
		android:background="#FF909090" />
  	
  	<TextView
  		android:id="@+id/top_tracks"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/top_tracks"
  		android:drawableLeft="@drawable/hot"
  		android:singleLine="true"
		android:ellipsize="marquee"
		android:paddingLeft="4dip"
		android:textColor="#ffffff"
		android:layout_margin="3dip"
        android:textSize="24sp"
        android:gravity="center_vertical">
  	</TextView>
  	
  	<View 
		android:layout_height="1dip"
		android:layout_width="fill_parent"
		android:background="#FF909090" />
  	
  	<TextView
  		android:id="@+id/top_artists"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/top_artists"
  		android:drawableLeft="@drawable/hot"
  		android:singleLine="true"
		android:ellipsize="marquee"
		android:paddingLeft="4dip"
		android:textColor="#ffffff"
		android:layout_margin="3dip"
        android:textSize="24sp"
        android:gravity="center_vertical">
  	</TextView>
  	
  	<View 
		android:layout_height="1dip"
		android:layout_width="fill_parent"
		android:background="#FF909090" />
  	
  	<TextView
  		android:id="@+id/loved_tracks"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/loved_tracks"
  		android:drawableLeft="@drawable/hot"
  		android:singleLine="true"
		android:ellipsize="marquee"
		android:paddingLeft="4dip"
		android:textColor="#ffffff"
		android:layout_margin="3dip"
        android:textSize="24sp"
        android:gravity="center_vertical">
  	</TextView>
  	
  	<View 
		android:layout_height="1dip"
		android:layout_width="fill_parent"
		android:background="#FF909090" />
  	
  	<TextView
  		android:id="@+id/hyped_tracks"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/hyped_tracks"
  		android:drawableLeft="@drawable/hot"
  		android:singleLine="true"
		android:ellipsize="marquee"
		android:paddingLeft="4dip"
		android:textColor="#ffffff"
		android:layout_margin="3dip"
        android:textSize="24sp"
        android:gravity="center_vertical">
  	</TextView>
  	
  	<View 
		android:layout_height="1dip"
		android:layout_width="fill_parent"
		android:background="#FF909090" />
  	
  	<TextView
  		android:id="@+id/hyped_artists"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/hyped_artists"
  		android:drawableLeft="@drawable/hot"
  		android:singleLine="true"
		android:ellipsize="marquee"
		android:paddingLeft="4dip"
		android:textColor="#ffffff"
		android:layout_margin="3dip"
        android:textSize="24sp"
        android:gravity="center_vertical">
  	</TextView>
  	
  	<View 
		android:layout_height="1dip"
		android:layout_width="fill_parent"
		android:background="#FF909090" />
  	
  	<TextView
  		android:id="@+id/top_tags"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/top_tags"
  		android:drawableLeft="@drawable/hot"
  		android:singleLine="true"
		android:ellipsize="marquee"
		android:paddingLeft="4dip"
		android:textColor="#ffffff"
		android:layout_margin="3dip"
        android:textSize="24sp"
        android:gravity="center_vertical">
  	</TextView>
  	
  	<View 
		android:layout_height="1dip"
		android:layout_width="fill_parent"
		android:background="#FF909090" />
  	
</LinearLayout>
