<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
  	<LinearLayout
  		android:id="@+id/button_group"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="horizontal"
  		android:layout_alignParentBottom="true">
	  	<Button
	  		android:id="@+id/preview_button"
	 		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/preview"
	 		android:layout_weight="1">
	  	</Button>
		<Button
  			android:id="@+id/download_button"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/download"
	 		android:layout_weight="1">
	  	</Button>
	  	<Button
	  		android:id="@+id/edit_button"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:text="@string/edit"
	  		android:layout_weight="1">
	  	</Button>
  		<Button
  			android:id="@+id/set_button"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/set_as"
  			android:visibility="gone"
  			android:layout_weight="1">
  		</Button>
		<Button
  			android:id="@+id/assign_button"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/assign"
  			android:visibility="gone"
  			android:layout_weight="1">
  		</Button>  		
  		<Button
  			android:id="@+id/share_button"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/share"
  			android:visibility="gone"
  			android:layout_weight="1">
  		</Button>
  		<ImageButton
  			android:id="@+id/shear_facebook_button"
  			android:layout_height="wrap_content"
  			android:layout_width="wrap_content"
  			android:src="@drawable/facebook_logo"
  			android:background="#00000000"
  			android:visibility="gone">
  		</ImageButton>
  	</LinearLayout>
	
	<include layout_height="wrap_content" android:id="@+id/ad" android:layout_above="@id/button_group" layout="@layout/ads"/>         
	
	<LinearLayout
	  	android:layout_width="fill_parent"
	  	android:layout_height="wrap_content"
	  	android:orientation="vertical"
	  	android:layout_above="@id/button_group"
	  	android:layout_alignParentTop="true">
	  	
	  	<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#0c212b"
			android:textSize="12sp"
			android:text="@string/ringtone_information">
		</TextView>
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>
	  	
	  	<LinearLayout
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:orientation="horizontal">
	  		<ImageView
	  			android:id="@+id/image"
	  			android:layout_width="50dip"
	  			android:layout_height="50dip">
	  		</ImageView>
	  		<RelativeLayout
	  			android:layout_width="fill_parent"
	  			android:layout_height="wrap_content"
	  			android:layout_gravity="center_vertical">
	  			<RatingBar
	  				android:id="@+id/avg_ratingbar"
	  				android:layout_alignParentRight="true"
	  				android:layout_width="wrap_content"
	  				android:layout_height="wrap_content"
	  				style="?android:attr/ratingBarStyleSmall"
	  				android:isIndicator="true"
	  				android:numStars="5"
	  				android:layout_alignParentTop="true"
	  				android:layout_centerVertical="true">
	  			</RatingBar>
		  		<LinearLayout
		  			android:id="@+id/title_artist_downloadcnt"
		  			android:layout_width="wrap_content"
		  			android:layout_height="wrap_content"
		  			android:layout_toLeftOf="@id/avg_ratingbar"
		  			android:layout_alignParentLeft="true"
		  			android:orientation="vertical">
			  		<TextView
			  			android:id="@+id/title"
			  			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:drawableLeft="@drawable/ic_song"
			  			android:gravity="center_vertical"
			  			android:singleLine="true"
			  			android:ellipsize="marquee">
			  		</TextView>
			  		<TextView
		  				android:id="@+id/artist"
		 	 			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:drawableLeft="@drawable/ic_artist"
			  			android:gravity="center_vertical"
			  			android:singleLine="true"
			  			android:ellipsize="marquee">
		  			</TextView>
		  			<TextView
		  				android:id="@+id/download_count"
		  				android:layout_width="wrap_content"
		  				android:layout_height="wrap_content"
		  				android:singleLine="true"
		  				android:ellipsize="marquee">
		  			</TextView>
		  		</LinearLayout>
	  		</RelativeLayout>
	  	</LinearLayout>
	  	
	  	<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>	
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#0c212b"
			android:textSize="12sp"
			android:text="@string/rate_ringtone">
		</TextView>
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>
	  	
	  	<RatingBar
	  		android:id="@+id/user_ratingbar"
			android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_gravity="center_horizontal"
	  		android:isIndicator="false"
	  		android:numStars="5">
	  	</RatingBar>
	  	
	  	<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#0c212b"
			android:textSize="12sp"
			android:text="@string/more_about">
		</TextView>
		<View
			android:layout_height="1dip"
			android:layout_width="wrap_content"
			android:background="#FF909090">
		</View>
	  	
	  	<ListView
	  		android:id="@+id/search_more_list"
	  		android:layout_width="fill_parent"
	  		android:layout_height="fill_parent">
	  	</ListView>
	</LinearLayout>
  	
</RelativeLayout>

